src/core-crm/objects/MC_Messaging_OTP_Setting__c/MC_Messaging_OTP_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MC Messaging OTP Setting</label>
</CustomObject>