src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/Access_Token_EndPoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_EndPoint_URL__c</fullName>
    <label>Access Token EndPoint URL</label>
    <length>74</length>
    <required>true</required>
    <type>Text</type>
</CustomField>