src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>