src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/Attributes__c.field-meta.xml
<CustomField>
    <fullName>Attributes__c</fullName>
    <label>Attributes</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>