src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>