src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/DefinitionKey__c.field-meta.xml
<CustomField>
    <fullName>DefinitionKey__c</fullName>
    <label>DefinitionKey</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>