src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>GrantType</label>
    <length>19</length>
    <required>true</required>
    <type>Text</type>
</CustomField>