src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>