src/core-crm/objects/MC_Messaging_OTP_Setting__c/fields/SMS_EndPoint_URL__c.field-meta.xml
<CustomField>
    <fullName>SMS_EndPoint_URL__c</fullName>
    <label>SMS EndPoint URL</label>
    <length>92</length>
    <required>true</required>
    <type>Text</type>
</CustomField>